# college-stuff

./: .gitigonre  .gitmodules  README.md
DS1-library/: DynamicContainer.h  Makefile  README.md  README.txt  book.cpp  book.h  catalog.cpp  catalog.h  demoforcontainer.cpp  main.cpp
DS1-library/data/: books.txt
DS1-library/menu/: bookmenu.h  editorkey.h  func.h  menu.h  menuINP.h
OOP1a/code/: CMakeLists.txt  build.sh  compile_commands.json
OOP1a/code/.build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  contacts.cbp  contacts.layout  main
OOP1a/code/.cache/clangd/index/: address.h.0A1D567361C0F5F0.idx  contact.h.ACBB9E6B6A208251.idx  contacts.h.97C95FF3261645A1.idx  email.h.CE821F7D9F2F6A34.idx  main.cpp.103FF45C649314A8.idx  phone.h.FB8AD71EFFE11E98.idx
OOP1a/code/include/: address.h  contact.h  contacts.h  email.h  phone.h  user.h
OOP1a/code/src/: address.cpp  contact.cpp  contacts.cpp  email.cpp  main.cpp  phone.cpp
OOP2a/: report.tex
OOP2a/code/: CMakeLists.txt  compile_commands.json  main.cpp  readme.txt
OOP2a/code/.build/: CMakeCache.txt  Makefile  OOP2a.cbp  OOP2a.layout  cmake_install.cmake  main
OOP2a/code/include/: benefit.h  commissionemployee.h  dentalBenefit.h  department.h  employee.h  healthBenefit.h  hourlyemployee.h  hrSystem.h  manageremployee.h  output.puml  salariedemployee.h
OOP2a/code/src/: benefit.cpp  commissionemployee.cpp  dentalBenefit.cpp  department.cpp  employee.cpp  healthBenefit.cpp  hourlyemployee.cpp  hrSystem.cpp  manageremployee.cpp  salariedemployee.cpp
OOP3d/: Report.aux  Report.tex
OOP3d/code/: CMakeLists.txt  build.sh  compile_commands.json  data.txt.~1~  data.txt.~2~  data.txt.~3~  main  main.cpp
OOP3d/code/.build/: CMakeCache.txt  Makefile  OOP3d.cbp  cmake_install.cmake
OOP3d/code/include/: car.h  carSys.h  customer.h  invoice.h  output.puml  rentalagreement.h  reservation.h
OOP3d/code/src/: car.cpp  carSys.cpp  customer.cpp  invoice.cpp  rentalagreement.cpp  reservation.cpp
